<resources>
    <string name="app_name">SpeedQuiz</string>
    <string name="nom_joueur1">joueur1</string>
    <string name="nom_joueur2">joueur 2</string>
    <string name="score_joueur1">0</string>
    <string name="score_joueur2">0</string>
    <string name="questions_joueur1"> </string>
    <string name="questions_joueur2"> </string>
    <string name="bouton_invisible_menu">MENU</string>
    <string name="bouton_invisible_rejouer">REJOUER</string>
    <string name="bouton_jouer">JOUER</string>
    <string name="hint_joueur1">Nom joueur1</string>
    <string name="hint_joueur2">Nom joueur2</string>
    <string name="bouton_nouveau_joueur">Nouveau Joueur</string>
    <string name="action_configuration">Configuration</string>
    <string name="action_about">About</string>
    <string name="activer_mode_nuit">Activer le mode nuit</string>
    <string name="vitesse_question">Temps entre chaque question : </string>
    <string name="enregister_et_quitter">Enregistrer et quitter</string>
    <string name="About">À propos</string>
    <string name="quitter">Quitter</string>
    <string name="quitter_sans_enregistrer">Quitter sans enregister</string>
    <string name="Texte_explicatif_about">SpeedQuiz est une application qui se joue en local à deux joueurs, le but étant de cliquer le plus rapidement sur le bouton si l`affirmation nous semble correcte</string>
</resources>