<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/nom_joueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nom_joueur1"
        android:textSize="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_joueur2"
        android:layout_width="600dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/compteur_joueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:text="@string/score_joueur1"
        android:textSize="90dp" />

    <TextView
        android:id="@+id/compteur_joueur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="10dp"
        android:rotation="180"
        android:text="@string/score_joueur2"
        android:textSize="90dp" />

    <TextView
        android:id="@+id/questions_joueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_joueur1"
        android:layout_centerInParent="true"
        android:text="@string/questions_joueur1"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/questions_joueur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_joueur2"
        android:layout_centerInParent="true"
        android:rotation="180"
        android:text="@string/questions_joueur2"
        android:textSize="20dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_joueur1"
        android:layout_width="600dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp" />

    <TextView
        android:id="@+id/nom_joueur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:rotation="180"
        android:text="@string/nom_joueur2"
        android:textSize="20dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="130dp"
            android:text="@string/bouton_invisible_menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_rejouer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/bouton_invisible_rejouer" />
    </RelativeLayout>

</RelativeLayout>