<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_speed_quiz"
    android:orientation="vertical"
    android:weightSum="3"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/action_configuration"
        android:textSize="50dp"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/ET_vitesse_questions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/vitesse_question"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <SeekBar
        android:id="@+id/main_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="8"
        android:min="1"
        android:layout_marginTop="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activer_mode_nuit"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            />
        <Switch
            android:id="@+id/sw_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/bt_valider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/enregister_et_quitter"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/quitterSansEnregister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/quitter_sans_enregistrer"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />



</LinearLayout>